# llm-zoomcamp-2026

./: .gitignore  README.md
01-agentic-rag/: pyproject.toml  q1.py  q2.py  q3.py  q4.py  q5.py  q6.py
02-vector-search/: q1.py  q2.py  q3.py  q4.py  q5.py  q6.py  vector_helper.py
03-orchestration/: README.md
03-orchestration/flows/: 4_simple_agent_3sentences.yaml
04-evaluation/: .gitignore  README.md  chunk_embeddings.npy  documents.json  eval_helper.py  main.py  pyproject.toml  q1.py  q2.py  q3.py  q4.py  q5.py  q6.py
05-monitoring/: .gitignore  pyproject.toml  q1.py  q2.py  q3.py  q4.py  q5.py  q6.py  rag_traced.py  sqlite_exporter.py
