[project]
name = "01-agentic-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "minsearch>=0.1.1",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "toyaikit>=0.0.11",
]
